// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Stake/> > should render component. not connected 1`] = `
<div>
  <div
    style="position: fixed; z-index: 9999; top: 16px; left: 16px; right: 16px; bottom: 16px; pointer-events: none;"
  />
  <div
    id="v1-stake-view"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 Paper-root  css-1px9s0k-MuiPaper-root"
      style="transform: none; webkit-transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column css-1rl1og4-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item card-header css-13i4rnv-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-gg4vpm"
          >
            <div
              class="MuiBox-root css-u4p24i"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 header-text css-18k89ek-MuiTypography-root"
              >
                Single Stake (3, 3)
              </p>
            </div>
            <div
              class="top-right"
            />
          </div>
          <div
            class="MuiBox-root css-k008qs"
          >
            <div
              class="MuiBox-root css-0"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                style="width: 155px;"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column css-1rl1og4-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
            >
              <div
                class="MuiBox-root css-rjww1q"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-jhdc2n-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-1r6indk-MuiGrid-root"
                  >
                    <div
                      class="Metric-root stake-apy css-17kya8e"
                    >
                      <div
                        class="MuiBox-root css-g45inh"
                      >
                        <div
                          class="MuiBox-root css-1n2mv2k"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 Metric-label css-1ehg17p-MuiTypography-root"
                          >
                            Annualized Rebases
                          </p>
                        </div>
                        <div
                          class="MuiBox-root css-2u9dk6"
                        >
                          <span
                            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                            style="width: 100%;"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-1r6indk-MuiGrid-root"
                  >
                    <div
                      class="Metric-root stake-tvl css-17kya8e"
                    >
                      <div
                        class="MuiBox-root css-g45inh"
                      >
                        <div
                          class="MuiBox-root css-1n2mv2k"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 Metric-label css-1ehg17p-MuiTypography-root"
                          >
                            Total Value Deposited
                          </p>
                        </div>
                        <div
                          class="MuiBox-root css-2u9dk6"
                        >
                          <span
                            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                            style="width: 100%;"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-1r6indk-MuiGrid-root"
                  >
                    <div
                      class="Metric-root stake-index css-17kya8e"
                    >
                      <div
                        class="MuiBox-root css-g45inh"
                      >
                        <div
                          class="MuiBox-root css-1n2mv2k"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 Metric-label css-1ehg17p-MuiTypography-root"
                          >
                            Current Index
                          </p>
                          <div
                            class="Metric-label MuiBox-root css-70qvj9"
                            style="font-size: 14px;"
                          >
                            <div
                              class="MuiBox-root css-0"
                              style="display: inline-flex; justify-content: center; align-self: center;"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall info-icon css-1b8e8sl-MuiSvgIcon-root"
                                focusable="false"
                                style="margin: 0px 5px; font-size: 1em;"
                                viewBox="0 0 20 20"
                              >
                                <path
                                  d="M 10 20 C 15.475 20 20 15.473 20 10 C 20 4.518 15.473 0 9.991 0 C 4.516 0 0 4.518 0 10 C 0 15.475 4.527 20 10 20 Z M 10 18.705 C 5.189 18.714 1.287 14.812 1.297 10.001 C 1.28 5.189 5.179 1.281 9.991 1.285 C 14.807 1.28 18.714 5.182 18.714 9.999 C 18.719 14.811 14.813 18.712 10 18.702 Z M 9.941 6.242 C 10.559 6.242 11.038 5.763 11.038 5.156 C 11.043 4.547 10.549 4.053 9.94 4.058 C 9.334 4.057 8.842 4.55 8.844 5.156 C 8.843 5.761 9.337 6.249 9.941 6.242 Z M 8.216 15.444 L 12.303 15.444 C 12.623 15.444 12.871 15.204 12.871 14.895 C 12.87 14.584 12.615 14.334 12.303 14.338 L 10.868 14.338 L 10.868 8.754 C 10.868 8.346 10.658 8.065 10.269 8.065 L 8.345 8.065 C 7.919 8.045 7.631 8.493 7.826 8.872 C 7.925 9.065 8.128 9.182 8.345 9.172 L 9.652 9.172 L 9.652 14.338 L 8.216 14.338 C 7.905 14.334 7.649 14.584 7.648 14.895 C 7.648 15.204 7.897 15.444 8.216 15.444 Z"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root css-2u9dk6"
                        >
                          <span
                            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                            style="width: 100%;"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="staking-area"
            >
              <div
                class="stake-wallet-notification"
              >
                <div
                  class="wallet-menu"
                  id="wallet-menu"
                >
                  Connect Wallet
                </div>
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-m77z2n-MuiTypography-root"
                >
                  Connect your wallet to stake OHM
                </h6>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Stake/> > should render the stake input Area when connected 1`] = `
<div>
  <div
    style="position: fixed; z-index: 9999; top: 16px; left: 16px; right: 16px; bottom: 16px; pointer-events: none;"
  />
  <div
    id="v1-stake-view"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 Paper-root  css-1px9s0k-MuiPaper-root"
      style="transform: none; webkit-transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column css-1rl1og4-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item card-header css-13i4rnv-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-gg4vpm"
          >
            <div
              class="MuiBox-root css-u4p24i"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 header-text css-18k89ek-MuiTypography-root"
              >
                Single Stake (3, 3)
              </p>
            </div>
            <div
              class="top-right"
            />
          </div>
          <div
            class="MuiBox-root css-k008qs"
          >
            <div
              class="MuiBox-root css-0"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                style="width: 155px;"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column css-1rl1og4-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
            >
              <div
                class="MuiBox-root css-rjww1q"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-jhdc2n-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-1r6indk-MuiGrid-root"
                  >
                    <div
                      class="Metric-root stake-apy css-17kya8e"
                    >
                      <div
                        class="MuiBox-root css-g45inh"
                      >
                        <div
                          class="MuiBox-root css-1n2mv2k"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 Metric-label css-1ehg17p-MuiTypography-root"
                          >
                            Annualized Rebases
                          </p>
                        </div>
                        <div
                          class="MuiBox-root css-2u9dk6"
                        >
                          <span
                            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                            style="width: 100%;"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-1r6indk-MuiGrid-root"
                  >
                    <div
                      class="Metric-root stake-tvl css-17kya8e"
                    >
                      <div
                        class="MuiBox-root css-g45inh"
                      >
                        <div
                          class="MuiBox-root css-1n2mv2k"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 Metric-label css-1ehg17p-MuiTypography-root"
                          >
                            Total Value Deposited
                          </p>
                        </div>
                        <div
                          class="MuiBox-root css-2u9dk6"
                        >
                          <span
                            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                            style="width: 100%;"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-1r6indk-MuiGrid-root"
                  >
                    <div
                      class="Metric-root stake-index css-17kya8e"
                    >
                      <div
                        class="MuiBox-root css-g45inh"
                      >
                        <div
                          class="MuiBox-root css-1n2mv2k"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 Metric-label css-1ehg17p-MuiTypography-root"
                          >
                            Current Index
                          </p>
                          <div
                            class="Metric-label MuiBox-root css-70qvj9"
                            style="font-size: 14px;"
                          >
                            <div
                              class="MuiBox-root css-0"
                              style="display: inline-flex; justify-content: center; align-self: center;"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall info-icon css-1b8e8sl-MuiSvgIcon-root"
                                focusable="false"
                                style="margin: 0px 5px; font-size: 1em;"
                                viewBox="0 0 20 20"
                              >
                                <path
                                  d="M 10 20 C 15.475 20 20 15.473 20 10 C 20 4.518 15.473 0 9.991 0 C 4.516 0 0 4.518 0 10 C 0 15.475 4.527 20 10 20 Z M 10 18.705 C 5.189 18.714 1.287 14.812 1.297 10.001 C 1.28 5.189 5.179 1.281 9.991 1.285 C 14.807 1.28 18.714 5.182 18.714 9.999 C 18.719 14.811 14.813 18.712 10 18.702 Z M 9.941 6.242 C 10.559 6.242 11.038 5.763 11.038 5.156 C 11.043 4.547 10.549 4.053 9.94 4.058 C 9.334 4.057 8.842 4.55 8.844 5.156 C 8.843 5.761 9.337 6.249 9.941 6.242 Z M 8.216 15.444 L 12.303 15.444 C 12.623 15.444 12.871 15.204 12.871 14.895 C 12.87 14.584 12.615 14.334 12.303 14.338 L 10.868 14.338 L 10.868 8.754 C 10.868 8.346 10.658 8.065 10.269 8.065 L 8.345 8.065 C 7.919 8.045 7.631 8.493 7.826 8.872 C 7.925 9.065 8.128 9.182 8.345 9.172 L 9.652 9.172 L 9.652 14.338 L 8.216 14.338 C 7.905 14.334 7.649 14.584 7.648 14.895 C 7.648 15.204 7.897 15.444 8.216 15.444 Z"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root css-2u9dk6"
                        >
                          <span
                            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                            style="width: 100%;"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="staking-area"
            >
              <div
                class="stake-action-area MuiBox-root css-0"
              >
                <div
                  class="MuiTabs-root Tabs-root stake-tab-buttons css-w00q8o-MuiTabs-root"
                >
                  <div
                    class="MuiTabs-scroller MuiTabs-fixed css-kqhgxw-MuiTabs-scroller"
                    style="overflow: hidden; margin-bottom: 0px;"
                  >
                    <div
                      aria-label="stake tabs"
                      class="MuiTabs-flexContainer MuiTabs-centered css-1mqo22u-MuiTabs-flexContainer"
                      role="tablist"
                    >
                      <button
                        aria-controls="simple-tabpanel-0"
                        aria-label="stake-button"
                        aria-selected="true"
                        class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected css-n7tk4x-MuiButtonBase-root-MuiTab-root"
                        id="simple-tab-0"
                        role="tab"
                        tabindex="0"
                        type="button"
                      >
                        Stake
                      </button>
                      <button
                        aria-controls="simple-tabpanel-1"
                        aria-label="unstake-button"
                        aria-selected="false"
                        class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-n7tk4x-MuiButtonBase-root-MuiTab-root"
                        id="simple-tab-1"
                        role="tab"
                        tabindex="-1"
                        type="button"
                      >
                        Unstake
                      </button>
                    </div>
                    <span
                      class="MuiTabs-indicator css-gi9wfz-MuiTabs-indicator"
                      style="left: 0px; width: 0px;"
                    />
                  </div>
                </div>
                <div
                  class="MuiBox-root css-1q7njkh"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 stake-note css-1ehg17p-MuiTypography-root"
                  >
                    All your assets are migrated
                  </p>
                </div>
                <div
                  class="stake-action-row v1-row  MuiBox-root css-70qvj9"
                >
                  <a
                    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation custom-root  css-fmy0hn-MuiButtonBase-root-MuiButton-root"
                    href="https://docs.olympusdao.finance/main/basics/migration"
                    style="margin-right: 10.5px;"
                    tabindex="0"
                    target="_blank"
                  >
                    Learn More
                    <span
                      class="MuiButton-endIcon MuiButton-iconSizeMedium css-1gnd1fd-MuiButton-endIcon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-1vu8dwd-MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 20 20"
                      >
                        <path
                          d="M4.297 17.445h9.539c1.523 0 2.305-.78 2.305-2.28v-9.58c0-1.507-.782-2.288-2.305-2.288h-9.54c-1.523 0-2.304.773-2.304 2.289v9.578c0 1.508.781 2.281 2.305 2.281Zm.016-.968c-.875 0-1.352-.461-1.352-1.368V5.633c0-.899.477-1.367 1.352-1.367h9.5c.867 0 1.359.468 1.359 1.367v9.476c0 .907-.492 1.368-1.36 1.368h-9.5Zm7.296-4.235c.266 0 .438-.195.438-.476V7.867c0-.344-.188-.492-.492-.492H7.64c-.29 0-.47.172-.47.438 0 .265.188.445.477.445H9.53l1.133-.078-1.055.992-3.382 3.383a.476.476 0 0 0-.149.328c0 .273.18.453.453.453a.47.47 0 0 0 .344-.149L10.25 9.82l.984-1.047-.078 1.282v1.718c0 .29.18.47.453.47Z"
                        />
                      </svg>
                    </span>
                  </a>
                  <div
                    aria-labelledby="simple-tab-0"
                    id="simple-tabpanel-0"
                    role="tabpanel"
                    style="overflow: hidden;"
                  >
                    <div
                      class="MuiBox-root css-19midj6"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation migrate-button css-xcv8oi-MuiButtonBase-root-MuiButton-root"
                        tabindex="0"
                        type="button"
                      >
                        Go to Stake V2
                      </button>
                    </div>
                  </div>
                  <div
                    aria-labelledby="simple-tab-1"
                    hidden=""
                    id="simple-tabpanel-1"
                    role="tabpanel"
                    style="overflow: hidden;"
                  />
                </div>
              </div>
              <div
                class="stake-user-data"
              >
                <div
                  class="DataRow-root data-row css-19fvmib"
                >
                  <div
                    class="MuiBox-root css-dlyoou"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-1sxx1a1-MuiTypography-root"
                    >
                      Unstaked Balance (v1)
                    </p>
                  </div>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1sxx1a1-MuiTypography-root"
                    id="user-balance"
                    style="text-align: right;"
                  >
                    0.0000 OHM
                  </p>
                </div>
                <div
                  class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAccordion-root MuiAccordion-gutters stake-accordion css-w5x1nb-MuiPaper-root-MuiAccordion-root"
                >
                  <div
                    aria-expanded="false"
                    class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-sh22l5-MuiButtonBase-root-MuiAccordionSummary-root"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
                    >
                      <div
                        class="DataRow-root data-row css-19fvmib"
                      >
                        <div
                          class="MuiBox-root css-dlyoou"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-1sxx1a1-MuiTypography-root"
                          >
                            Total Staked Balance
                          </p>
                        </div>
                        <p
                          class="MuiTypography-root MuiTypography-body1 css-1sxx1a1-MuiTypography-root"
                          id="user-staked-balance"
                          style="text-align: right;"
                        >
                          0 sOHM
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall stake-expand css-1szvxe0-MuiSvgIcon-root"
                        data-testid="ExpandMoreIcon"
                        focusable="false"
                        viewBox="0 0 20 20"
                      >
                        <path
                          d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
                    style="min-height: 0px;"
                  >
                    <div
                      class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                    >
                      <div
                        class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                      >
                        <div
                          class="MuiAccordion-region"
                          role="region"
                        >
                          <div
                            class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                          >
                            <div
                              class="DataRow-root data-row css-19fvmib"
                              style="padding-left: 10px;"
                            >
                              <div
                                class="MuiBox-root css-1xv45iw"
                              >
                                <p
                                  class="MuiTypography-root MuiTypography-body1 css-iwe8j-MuiTypography-root"
                                >
                                  sOHM Balance (v1)
                                </p>
                              </div>
                              <p
                                class="MuiTypography-root MuiTypography-body1 css-iwe8j-MuiTypography-root"
                                style="text-align: right;"
                              >
                                0.0000 sOHM
                              </p>
                            </div>
                            <div
                              class="DataRow-root data-row css-19fvmib"
                              style="padding-left: 10px;"
                            >
                              <div
                                class="MuiBox-root css-1xv45iw"
                              >
                                <p
                                  class="MuiTypography-root MuiTypography-body1 css-iwe8j-MuiTypography-root"
                                >
                                  sOHM Balance (v2)
                                </p>
                              </div>
                              <p
                                class="MuiTypography-root MuiTypography-body1 css-iwe8j-MuiTypography-root"
                                style="text-align: right;"
                              >
                                0.0000 sOHM
                              </p>
                            </div>
                            <div
                              class="DataRow-root data-row css-19fvmib"
                              style="padding-left: 10px;"
                            >
                              <div
                                class="MuiBox-root css-1xv45iw"
                              >
                                <p
                                  class="MuiTypography-root MuiTypography-body1 css-iwe8j-MuiTypography-root"
                                >
                                  gOHM Balance (v2)
                                </p>
                              </div>
                              <p
                                class="MuiTypography-root MuiTypography-body1 css-iwe8j-MuiTypography-root"
                                style="text-align: right;"
                              >
                                0.0000 gOHM
                              </p>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <hr
                  class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
                />
                <div
                  class="DataRow-root data-row css-19fvmib"
                >
                  <div
                    class="MuiBox-root css-dlyoou"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-1sxx1a1-MuiTypography-root"
                    >
                      Your Next Rebase
                    </p>
                  </div>
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                    style="width: 80px;"
                  />
                </div>
                <div
                  class="DataRow-root data-row css-19fvmib"
                >
                  <div
                    class="MuiBox-root css-dlyoou"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-1sxx1a1-MuiTypography-root"
                    >
                      Next Rebase Yield
                    </p>
                  </div>
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                    style="width: 80px;"
                  />
                </div>
                <div
                  class="DataRow-root data-row css-19fvmib"
                >
                  <div
                    class="MuiBox-root css-dlyoou"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-1sxx1a1-MuiTypography-root"
                    >
                      Rebases (5-Day Rate)
                    </p>
                  </div>
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                    style="width: 80px;"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Stake/> > should render the v1 migration modal 1`] = `
<div>
  <div
    style="position: fixed; z-index: 9999; top: 16px; left: 16px; right: 16px; bottom: 16px; pointer-events: none;"
  />
  <div
    id="v1-stake-view"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 Paper-root  css-1px9s0k-MuiPaper-root"
      style="transform: none; webkit-transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column css-1rl1og4-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item card-header css-13i4rnv-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-gg4vpm"
          >
            <div
              class="MuiBox-root css-u4p24i"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 header-text css-18k89ek-MuiTypography-root"
              >
                Single Stake (3, 3)
              </p>
            </div>
            <div
              class="top-right"
            />
          </div>
          <div
            class="MuiBox-root css-k008qs"
          >
            <div
              class="MuiBox-root css-0"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                style="width: 155px;"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column css-1rl1og4-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
            >
              <div
                class="MuiBox-root css-rjww1q"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-jhdc2n-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-1r6indk-MuiGrid-root"
                  >
                    <div
                      class="Metric-root stake-apy css-17kya8e"
                    >
                      <div
                        class="MuiBox-root css-g45inh"
                      >
                        <div
                          class="MuiBox-root css-1n2mv2k"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 Metric-label css-1ehg17p-MuiTypography-root"
                          >
                            Annualized Rebases
                          </p>
                        </div>
                        <div
                          class="MuiBox-root css-2u9dk6"
                        >
                          <span
                            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                            style="width: 100%;"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-1r6indk-MuiGrid-root"
                  >
                    <div
                      class="Metric-root stake-tvl css-17kya8e"
                    >
                      <div
                        class="MuiBox-root css-g45inh"
                      >
                        <div
                          class="MuiBox-root css-1n2mv2k"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 Metric-label css-1ehg17p-MuiTypography-root"
                          >
                            Total Value Deposited
                          </p>
                        </div>
                        <div
                          class="MuiBox-root css-2u9dk6"
                        >
                          <span
                            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                            style="width: 100%;"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-1r6indk-MuiGrid-root"
                  >
                    <div
                      class="Metric-root stake-index css-17kya8e"
                    >
                      <div
                        class="MuiBox-root css-g45inh"
                      >
                        <div
                          class="MuiBox-root css-1n2mv2k"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 Metric-label css-1ehg17p-MuiTypography-root"
                          >
                            Current Index
                          </p>
                          <div
                            class="Metric-label MuiBox-root css-70qvj9"
                            style="font-size: 14px;"
                          >
                            <div
                              class="MuiBox-root css-0"
                              style="display: inline-flex; justify-content: center; align-self: center;"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall info-icon css-1b8e8sl-MuiSvgIcon-root"
                                focusable="false"
                                style="margin: 0px 5px; font-size: 1em;"
                                viewBox="0 0 20 20"
                              >
                                <path
                                  d="M 10 20 C 15.475 20 20 15.473 20 10 C 20 4.518 15.473 0 9.991 0 C 4.516 0 0 4.518 0 10 C 0 15.475 4.527 20 10 20 Z M 10 18.705 C 5.189 18.714 1.287 14.812 1.297 10.001 C 1.28 5.189 5.179 1.281 9.991 1.285 C 14.807 1.28 18.714 5.182 18.714 9.999 C 18.719 14.811 14.813 18.712 10 18.702 Z M 9.941 6.242 C 10.559 6.242 11.038 5.763 11.038 5.156 C 11.043 4.547 10.549 4.053 9.94 4.058 C 9.334 4.057 8.842 4.55 8.844 5.156 C 8.843 5.761 9.337 6.249 9.941 6.242 Z M 8.216 15.444 L 12.303 15.444 C 12.623 15.444 12.871 15.204 12.871 14.895 C 12.87 14.584 12.615 14.334 12.303 14.338 L 10.868 14.338 L 10.868 8.754 C 10.868 8.346 10.658 8.065 10.269 8.065 L 8.345 8.065 C 7.919 8.045 7.631 8.493 7.826 8.872 C 7.925 9.065 8.128 9.182 8.345 9.172 L 9.652 9.172 L 9.652 14.338 L 8.216 14.338 C 7.905 14.334 7.649 14.584 7.648 14.895 C 7.648 15.204 7.897 15.444 8.216 15.444 Z"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root css-2u9dk6"
                        >
                          <span
                            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                            style="width: 100%;"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="staking-area"
            >
              <div
                class="stake-action-area MuiBox-root css-0"
              >
                <div
                  class="MuiTabs-root Tabs-root stake-tab-buttons css-w00q8o-MuiTabs-root"
                >
                  <div
                    class="MuiTabs-scroller MuiTabs-fixed css-kqhgxw-MuiTabs-scroller"
                    style="overflow: hidden; margin-bottom: 0px;"
                  >
                    <div
                      aria-label="stake tabs"
                      class="MuiTabs-flexContainer MuiTabs-centered css-1mqo22u-MuiTabs-flexContainer"
                      role="tablist"
                    >
                      <button
                        aria-controls="simple-tabpanel-0"
                        aria-label="stake-button"
                        aria-selected="true"
                        class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected css-n7tk4x-MuiButtonBase-root-MuiTab-root"
                        id="simple-tab-0"
                        role="tab"
                        tabindex="0"
                        type="button"
                      >
                        Stake
                      </button>
                      <button
                        aria-controls="simple-tabpanel-1"
                        aria-label="unstake-button"
                        aria-selected="false"
                        class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-n7tk4x-MuiButtonBase-root-MuiTab-root"
                        id="simple-tab-1"
                        role="tab"
                        tabindex="-1"
                        type="button"
                      >
                        Unstake
                      </button>
                    </div>
                    <span
                      class="MuiTabs-indicator css-gi9wfz-MuiTabs-indicator"
                      style="left: 0px; width: 0px;"
                    />
                  </div>
                </div>
                <div
                  class="MuiBox-root css-1q7njkh"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 stake-note css-1ehg17p-MuiTypography-root"
                  >
                    All your assets are migrated
                  </p>
                </div>
                <div
                  class="stake-action-row v1-row  MuiBox-root css-70qvj9"
                >
                  <a
                    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation custom-root  css-fmy0hn-MuiButtonBase-root-MuiButton-root"
                    href="https://docs.olympusdao.finance/main/basics/migration"
                    style="margin-right: 10.5px;"
                    tabindex="0"
                    target="_blank"
                  >
                    Learn More
                    <span
                      class="MuiButton-endIcon MuiButton-iconSizeMedium css-1gnd1fd-MuiButton-endIcon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-1vu8dwd-MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 20 20"
                      >
                        <path
                          d="M4.297 17.445h9.539c1.523 0 2.305-.78 2.305-2.28v-9.58c0-1.507-.782-2.288-2.305-2.288h-9.54c-1.523 0-2.304.773-2.304 2.289v9.578c0 1.508.781 2.281 2.305 2.281Zm.016-.968c-.875 0-1.352-.461-1.352-1.368V5.633c0-.899.477-1.367 1.352-1.367h9.5c.867 0 1.359.468 1.359 1.367v9.476c0 .907-.492 1.368-1.36 1.368h-9.5Zm7.296-4.235c.266 0 .438-.195.438-.476V7.867c0-.344-.188-.492-.492-.492H7.64c-.29 0-.47.172-.47.438 0 .265.188.445.477.445H9.53l1.133-.078-1.055.992-3.382 3.383a.476.476 0 0 0-.149.328c0 .273.18.453.453.453a.47.47 0 0 0 .344-.149L10.25 9.82l.984-1.047-.078 1.282v1.718c0 .29.18.47.453.47Z"
                        />
                      </svg>
                    </span>
                  </a>
                  <div
                    aria-labelledby="simple-tab-0"
                    id="simple-tabpanel-0"
                    role="tabpanel"
                    style="overflow: hidden;"
                  >
                    <div
                      class="MuiBox-root css-19midj6"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation migrate-button css-xcv8oi-MuiButtonBase-root-MuiButton-root"
                        tabindex="0"
                        type="button"
                      >
                        Go to Stake V2
                      </button>
                    </div>
                  </div>
                  <div
                    aria-labelledby="simple-tab-1"
                    hidden=""
                    id="simple-tabpanel-1"
                    role="tabpanel"
                    style="overflow: hidden;"
                  />
                </div>
              </div>
              <div
                class="stake-user-data"
              >
                <div
                  class="DataRow-root data-row css-19fvmib"
                >
                  <div
                    class="MuiBox-root css-dlyoou"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-1sxx1a1-MuiTypography-root"
                    >
                      Unstaked Balance (v1)
                    </p>
                  </div>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1sxx1a1-MuiTypography-root"
                    id="user-balance"
                    style="text-align: right;"
                  >
                    0.0000 OHM
                  </p>
                </div>
                <div
                  class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAccordion-root MuiAccordion-gutters stake-accordion css-w5x1nb-MuiPaper-root-MuiAccordion-root"
                >
                  <div
                    aria-expanded="false"
                    class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-sh22l5-MuiButtonBase-root-MuiAccordionSummary-root"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
                    >
                      <div
                        class="DataRow-root data-row css-19fvmib"
                      >
                        <div
                          class="MuiBox-root css-dlyoou"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-1sxx1a1-MuiTypography-root"
                          >
                            Total Staked Balance
                          </p>
                        </div>
                        <p
                          class="MuiTypography-root MuiTypography-body1 css-1sxx1a1-MuiTypography-root"
                          id="user-staked-balance"
                          style="text-align: right;"
                        >
                          0 sOHM
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall stake-expand css-1szvxe0-MuiSvgIcon-root"
                        data-testid="ExpandMoreIcon"
                        focusable="false"
                        viewBox="0 0 20 20"
                      >
                        <path
                          d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
                    style="min-height: 0px;"
                  >
                    <div
                      class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                    >
                      <div
                        class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                      >
                        <div
                          class="MuiAccordion-region"
                          role="region"
                        >
                          <div
                            class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                          >
                            <div
                              class="DataRow-root data-row css-19fvmib"
                              style="padding-left: 10px;"
                            >
                              <div
                                class="MuiBox-root css-1xv45iw"
                              >
                                <p
                                  class="MuiTypography-root MuiTypography-body1 css-iwe8j-MuiTypography-root"
                                >
                                  sOHM Balance (v1)
                                </p>
                              </div>
                              <p
                                class="MuiTypography-root MuiTypography-body1 css-iwe8j-MuiTypography-root"
                                style="text-align: right;"
                              >
                                0.0000 sOHM
                              </p>
                            </div>
                            <div
                              class="DataRow-root data-row css-19fvmib"
                              style="padding-left: 10px;"
                            >
                              <div
                                class="MuiBox-root css-1xv45iw"
                              >
                                <p
                                  class="MuiTypography-root MuiTypography-body1 css-iwe8j-MuiTypography-root"
                                >
                                  sOHM Balance (v2)
                                </p>
                              </div>
                              <p
                                class="MuiTypography-root MuiTypography-body1 css-iwe8j-MuiTypography-root"
                                style="text-align: right;"
                              >
                                0.0000 sOHM
                              </p>
                            </div>
                            <div
                              class="DataRow-root data-row css-19fvmib"
                              style="padding-left: 10px;"
                            >
                              <div
                                class="MuiBox-root css-1xv45iw"
                              >
                                <p
                                  class="MuiTypography-root MuiTypography-body1 css-iwe8j-MuiTypography-root"
                                >
                                  gOHM Balance (v2)
                                </p>
                              </div>
                              <p
                                class="MuiTypography-root MuiTypography-body1 css-iwe8j-MuiTypography-root"
                                style="text-align: right;"
                              >
                                0.0000 gOHM
                              </p>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <hr
                  class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
                />
                <div
                  class="DataRow-root data-row css-19fvmib"
                >
                  <div
                    class="MuiBox-root css-dlyoou"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-1sxx1a1-MuiTypography-root"
                    >
                      Your Next Rebase
                    </p>
                  </div>
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                    style="width: 80px;"
                  />
                </div>
                <div
                  class="DataRow-root data-row css-19fvmib"
                >
                  <div
                    class="MuiBox-root css-dlyoou"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-1sxx1a1-MuiTypography-root"
                    >
                      Next Rebase Yield
                    </p>
                  </div>
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                    style="width: 80px;"
                  />
                </div>
                <div
                  class="DataRow-root data-row css-19fvmib"
                >
                  <div
                    class="MuiBox-root css-dlyoou"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-1sxx1a1-MuiTypography-root"
                    >
                      Rebases (5-Day Rate)
                    </p>
                  </div>
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                    style="width: 80px;"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Stake/> > should render the v1 migration modal and banner 1`] = `
<div>
  <div
    style="position: fixed; z-index: 9999; top: 16px; left: 16px; right: 16px; bottom: 16px; pointer-events: none;"
  />
  <div
    id="v1-stake-view"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 Paper-root  css-1px9s0k-MuiPaper-root"
      style="transform: none; webkit-transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column css-1rl1og4-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item card-header css-13i4rnv-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-gg4vpm"
          >
            <div
              class="MuiBox-root css-u4p24i"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 header-text css-18k89ek-MuiTypography-root"
              >
                Single Stake (3, 3)
              </p>
            </div>
            <div
              class="top-right"
            />
          </div>
          <div
            class="MuiBox-root css-k008qs"
          >
            <div
              class="MuiBox-root css-0"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                style="width: 155px;"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column css-1rl1og4-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
            >
              <div
                class="MuiBox-root css-rjww1q"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-jhdc2n-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-1r6indk-MuiGrid-root"
                  >
                    <div
                      class="Metric-root stake-apy css-17kya8e"
                    >
                      <div
                        class="MuiBox-root css-g45inh"
                      >
                        <div
                          class="MuiBox-root css-1n2mv2k"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 Metric-label css-1ehg17p-MuiTypography-root"
                          >
                            Annualized Rebases
                          </p>
                        </div>
                        <div
                          class="MuiBox-root css-2u9dk6"
                        >
                          <span
                            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                            style="width: 100%;"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-1r6indk-MuiGrid-root"
                  >
                    <div
                      class="Metric-root stake-tvl css-17kya8e"
                    >
                      <div
                        class="MuiBox-root css-g45inh"
                      >
                        <div
                          class="MuiBox-root css-1n2mv2k"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 Metric-label css-1ehg17p-MuiTypography-root"
                          >
                            Total Value Deposited
                          </p>
                        </div>
                        <div
                          class="MuiBox-root css-2u9dk6"
                        >
                          <span
                            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                            style="width: 100%;"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-1r6indk-MuiGrid-root"
                  >
                    <div
                      class="Metric-root stake-index css-17kya8e"
                    >
                      <div
                        class="MuiBox-root css-g45inh"
                      >
                        <div
                          class="MuiBox-root css-1n2mv2k"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 Metric-label css-1ehg17p-MuiTypography-root"
                          >
                            Current Index
                          </p>
                          <div
                            class="Metric-label MuiBox-root css-70qvj9"
                            style="font-size: 14px;"
                          >
                            <div
                              class="MuiBox-root css-0"
                              style="display: inline-flex; justify-content: center; align-self: center;"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall info-icon css-1b8e8sl-MuiSvgIcon-root"
                                focusable="false"
                                style="margin: 0px 5px; font-size: 1em;"
                                viewBox="0 0 20 20"
                              >
                                <path
                                  d="M 10 20 C 15.475 20 20 15.473 20 10 C 20 4.518 15.473 0 9.991 0 C 4.516 0 0 4.518 0 10 C 0 15.475 4.527 20 10 20 Z M 10 18.705 C 5.189 18.714 1.287 14.812 1.297 10.001 C 1.28 5.189 5.179 1.281 9.991 1.285 C 14.807 1.28 18.714 5.182 18.714 9.999 C 18.719 14.811 14.813 18.712 10 18.702 Z M 9.941 6.242 C 10.559 6.242 11.038 5.763 11.038 5.156 C 11.043 4.547 10.549 4.053 9.94 4.058 C 9.334 4.057 8.842 4.55 8.844 5.156 C 8.843 5.761 9.337 6.249 9.941 6.242 Z M 8.216 15.444 L 12.303 15.444 C 12.623 15.444 12.871 15.204 12.871 14.895 C 12.87 14.584 12.615 14.334 12.303 14.338 L 10.868 14.338 L 10.868 8.754 C 10.868 8.346 10.658 8.065 10.269 8.065 L 8.345 8.065 C 7.919 8.045 7.631 8.493 7.826 8.872 C 7.925 9.065 8.128 9.182 8.345 9.172 L 9.652 9.172 L 9.652 14.338 L 8.216 14.338 C 7.905 14.334 7.649 14.584 7.648 14.895 C 7.648 15.204 7.897 15.444 8.216 15.444 Z"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root css-2u9dk6"
                        >
                          <span
                            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                            style="width: 100%;"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="staking-area"
            >
              <div
                class="stake-action-area MuiBox-root css-0"
              >
                <div
                  class="MuiTabs-root Tabs-root stake-tab-buttons css-w00q8o-MuiTabs-root"
                >
                  <div
                    class="MuiTabs-scroller MuiTabs-fixed css-kqhgxw-MuiTabs-scroller"
                    style="overflow: hidden; margin-bottom: 0px;"
                  >
                    <div
                      aria-label="stake tabs"
                      class="MuiTabs-flexContainer MuiTabs-centered css-1mqo22u-MuiTabs-flexContainer"
                      role="tablist"
                    >
                      <button
                        aria-controls="simple-tabpanel-0"
                        aria-label="stake-button"
                        aria-selected="true"
                        class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected css-n7tk4x-MuiButtonBase-root-MuiTab-root"
                        id="simple-tab-0"
                        role="tab"
                        tabindex="0"
                        type="button"
                      >
                        Stake
                      </button>
                      <button
                        aria-controls="simple-tabpanel-1"
                        aria-label="unstake-button"
                        aria-selected="false"
                        class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-n7tk4x-MuiButtonBase-root-MuiTab-root"
                        id="simple-tab-1"
                        role="tab"
                        tabindex="-1"
                        type="button"
                      >
                        Unstake
                      </button>
                    </div>
                    <span
                      class="MuiTabs-indicator css-gi9wfz-MuiTabs-indicator"
                      style="left: 0px; width: 0px;"
                    />
                  </div>
                </div>
                <div
                  class="MuiBox-root css-1q7njkh"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 stake-note css-1ehg17p-MuiTypography-root"
                  >
                    All your assets are migrated
                  </p>
                </div>
                <div
                  class="stake-action-row v1-row  MuiBox-root css-70qvj9"
                >
                  <a
                    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation custom-root  css-fmy0hn-MuiButtonBase-root-MuiButton-root"
                    href="https://docs.olympusdao.finance/main/basics/migration"
                    style="margin-right: 10.5px;"
                    tabindex="0"
                    target="_blank"
                  >
                    Learn More
                    <span
                      class="MuiButton-endIcon MuiButton-iconSizeMedium css-1gnd1fd-MuiButton-endIcon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-1vu8dwd-MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 20 20"
                      >
                        <path
                          d="M4.297 17.445h9.539c1.523 0 2.305-.78 2.305-2.28v-9.58c0-1.507-.782-2.288-2.305-2.288h-9.54c-1.523 0-2.304.773-2.304 2.289v9.578c0 1.508.781 2.281 2.305 2.281Zm.016-.968c-.875 0-1.352-.461-1.352-1.368V5.633c0-.899.477-1.367 1.352-1.367h9.5c.867 0 1.359.468 1.359 1.367v9.476c0 .907-.492 1.368-1.36 1.368h-9.5Zm7.296-4.235c.266 0 .438-.195.438-.476V7.867c0-.344-.188-.492-.492-.492H7.64c-.29 0-.47.172-.47.438 0 .265.188.445.477.445H9.53l1.133-.078-1.055.992-3.382 3.383a.476.476 0 0 0-.149.328c0 .273.18.453.453.453a.47.47 0 0 0 .344-.149L10.25 9.82l.984-1.047-.078 1.282v1.718c0 .29.18.47.453.47Z"
                        />
                      </svg>
                    </span>
                  </a>
                  <div
                    aria-labelledby="simple-tab-0"
                    id="simple-tabpanel-0"
                    role="tabpanel"
                    style="overflow: hidden;"
                  >
                    <div
                      class="MuiBox-root css-19midj6"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation migrate-button css-xcv8oi-MuiButtonBase-root-MuiButton-root"
                        tabindex="0"
                        type="button"
                      >
                        Go to Stake V2
                      </button>
                    </div>
                  </div>
                  <div
                    aria-labelledby="simple-tab-1"
                    hidden=""
                    id="simple-tabpanel-1"
                    role="tabpanel"
                    style="overflow: hidden;"
                  />
                </div>
              </div>
              <div
                class="stake-user-data"
              >
                <div
                  class="DataRow-root data-row css-19fvmib"
                >
                  <div
                    class="MuiBox-root css-dlyoou"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-1sxx1a1-MuiTypography-root"
                    >
                      Unstaked Balance (v1)
                    </p>
                  </div>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1sxx1a1-MuiTypography-root"
                    id="user-balance"
                    style="text-align: right;"
                  >
                    0.0000 OHM
                  </p>
                </div>
                <div
                  class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAccordion-root MuiAccordion-gutters stake-accordion css-w5x1nb-MuiPaper-root-MuiAccordion-root"
                >
                  <div
                    aria-expanded="false"
                    class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-sh22l5-MuiButtonBase-root-MuiAccordionSummary-root"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
                    >
                      <div
                        class="DataRow-root data-row css-19fvmib"
                      >
                        <div
                          class="MuiBox-root css-dlyoou"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-1sxx1a1-MuiTypography-root"
                          >
                            Total Staked Balance
                          </p>
                        </div>
                        <p
                          class="MuiTypography-root MuiTypography-body1 css-1sxx1a1-MuiTypography-root"
                          id="user-staked-balance"
                          style="text-align: right;"
                        >
                          0 sOHM
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall stake-expand css-1szvxe0-MuiSvgIcon-root"
                        data-testid="ExpandMoreIcon"
                        focusable="false"
                        viewBox="0 0 20 20"
                      >
                        <path
                          d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
                    style="min-height: 0px;"
                  >
                    <div
                      class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                    >
                      <div
                        class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                      >
                        <div
                          class="MuiAccordion-region"
                          role="region"
                        >
                          <div
                            class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                          >
                            <div
                              class="DataRow-root data-row css-19fvmib"
                              style="padding-left: 10px;"
                            >
                              <div
                                class="MuiBox-root css-1xv45iw"
                              >
                                <p
                                  class="MuiTypography-root MuiTypography-body1 css-iwe8j-MuiTypography-root"
                                >
                                  sOHM Balance (v1)
                                </p>
                              </div>
                              <p
                                class="MuiTypography-root MuiTypography-body1 css-iwe8j-MuiTypography-root"
                                style="text-align: right;"
                              >
                                0.0000 sOHM
                              </p>
                            </div>
                            <div
                              class="DataRow-root data-row css-19fvmib"
                              style="padding-left: 10px;"
                            >
                              <div
                                class="MuiBox-root css-1xv45iw"
                              >
                                <p
                                  class="MuiTypography-root MuiTypography-body1 css-iwe8j-MuiTypography-root"
                                >
                                  sOHM Balance (v2)
                                </p>
                              </div>
                              <p
                                class="MuiTypography-root MuiTypography-body1 css-iwe8j-MuiTypography-root"
                                style="text-align: right;"
                              >
                                0.0000 sOHM
                              </p>
                            </div>
                            <div
                              class="DataRow-root data-row css-19fvmib"
                              style="padding-left: 10px;"
                            >
                              <div
                                class="MuiBox-root css-1xv45iw"
                              >
                                <p
                                  class="MuiTypography-root MuiTypography-body1 css-iwe8j-MuiTypography-root"
                                >
                                  gOHM Balance (v2)
                                </p>
                              </div>
                              <p
                                class="MuiTypography-root MuiTypography-body1 css-iwe8j-MuiTypography-root"
                                style="text-align: right;"
                              >
                                0.0000 gOHM
                              </p>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <hr
                  class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
                />
                <div
                  class="DataRow-root data-row css-19fvmib"
                >
                  <div
                    class="MuiBox-root css-dlyoou"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-1sxx1a1-MuiTypography-root"
                    >
                      Your Next Rebase
                    </p>
                  </div>
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                    style="width: 80px;"
                  />
                </div>
                <div
                  class="DataRow-root data-row css-19fvmib"
                >
                  <div
                    class="MuiBox-root css-dlyoou"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-1sxx1a1-MuiTypography-root"
                    >
                      Next Rebase Yield
                    </p>
                  </div>
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                    style="width: 80px;"
                  />
                </div>
                <div
                  class="DataRow-root data-row css-19fvmib"
                >
                  <div
                    class="MuiBox-root css-dlyoou"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-1sxx1a1-MuiTypography-root"
                    >
                      Rebases (5-Day Rate)
                    </p>
                  </div>
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                    style="width: 80px;"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
